--- a/res/menu/options_main.xml
+++ b/res/menu/options_main.xml
@@ -34,4 +34,7 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
         android:id="@+id/main_measurements"
         android:icon="@drawable/measurement"
         android:title="@string/measurements"/>
+    <item
+        android:id="@+id/main_questionnaire"
+        android:title="@string/questionnaire"/>
 </menu>
